// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Componente UserInfo > aplica estilos predeterminados correctamente 1`] = `
<DocumentFragment>
  <div
    class="user-info"
  >
    <div
      class=" sb-avatar"
      style="display: inline-block; vertical-align: middle; width: 60px; height: 60px; border-radius: 100px; font-family: Helvetica, Arial, sans-serif;"
    >
      <div
        class=" sb-avatar__text"
        style="width: 60px; height: 60px; line-height: initial; text-align: center; color: rgb(255, 255, 255); background: rgb(1, 43, 115); border-radius: 100px;"
        title="Jane Smith"
      >
        <div
          style="display: table; table-layout: fixed; width: 100%; height: 100%;"
        >
          <span
            style="display: table-cell; vertical-align: middle; font-size: 100%; white-space: nowrap;"
          >
            <span />
          </span>
        </div>
      </div>
    </div>
    <div
      class="user-info_content"
    >
      <h3
        class="title title-primary"
        data-testid="title-component"
      >
        Jane Smith
      </h3>
      <p
        class="body' body-primary"
        data-testid="body-component"
      >
        janesmith
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Componente UserInfo > maneja correctamente la ausencia de propiedades opcionales 1`] = `
<DocumentFragment>
  <div
    class="user-info"
  >
    <div
      class=" sb-avatar"
      style="display: inline-block; vertical-align: middle; width: 60px; height: 60px; border-radius: 100px; font-family: Helvetica, Arial, sans-serif;"
    >
      <div
        class=" sb-avatar__text"
        style="width: 60px; height: 60px; line-height: initial; text-align: center; color: rgb(255, 255, 255); background: rgb(1, 43, 115); border-radius: 100px;"
        title="undefined undefined"
      >
        <div
          style="display: table; table-layout: fixed; width: 100%; height: 100%;"
        >
          <span
            style="display: table-cell; vertical-align: middle; font-size: 100%; white-space: nowrap;"
          >
            <span />
          </span>
        </div>
      </div>
    </div>
    <div
      class="user-info_content"
    >
      <h3
        class="title title-primary"
        data-testid="title-component"
      >
         
      </h3>
      <p
        class="body' body-primary"
        data-testid="body-component"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Componente UserInfo > renderiza correctamente con nombre, apellido y nombre de usuario 1`] = `
<DocumentFragment>
  <div
    class="user-info"
  >
    <div
      class=" sb-avatar"
      style="display: inline-block; vertical-align: middle; width: 60px; height: 60px; border-radius: 100px; font-family: Helvetica, Arial, sans-serif;"
    >
      <div
        class=" sb-avatar__text"
        style="width: 60px; height: 60px; line-height: initial; text-align: center; color: rgb(255, 255, 255); background: rgb(1, 43, 115); border-radius: 100px;"
        title="John Doe"
      >
        <div
          style="display: table; table-layout: fixed; width: 100%; height: 100%;"
        >
          <span
            style="display: table-cell; vertical-align: middle; font-size: 100%; white-space: nowrap;"
          >
            <span />
          </span>
        </div>
      </div>
    </div>
    <div
      class="user-info_content"
    >
      <h3
        class="title title-primary"
        data-testid="title-component"
      >
        John Doe
      </h3>
      <p
        class="body' body-primary"
        data-testid="body-component"
      >
        johndoe
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Componente UserInfo > renderiza correctamente solo con el nombre de usuario 1`] = `
<DocumentFragment>
  <div
    class="user-info"
  >
    <div
      class=" sb-avatar"
      style="display: inline-block; vertical-align: middle; width: 60px; height: 60px; border-radius: 100px; font-family: Helvetica, Arial, sans-serif;"
    >
      <div
        class=" sb-avatar__text"
        style="width: 60px; height: 60px; line-height: initial; text-align: center; color: rgb(255, 255, 255); background: rgb(1, 43, 115); border-radius: 100px;"
        title="undefined undefined"
      >
        <div
          style="display: table; table-layout: fixed; width: 100%; height: 100%;"
        >
          <span
            style="display: table-cell; vertical-align: middle; font-size: 100%; white-space: nowrap;"
          >
            <span />
          </span>
        </div>
      </div>
    </div>
    <div
      class="user-info_content"
    >
      <h3
        class="title title-primary"
        data-testid="title-component"
      >
         
      </h3>
      <p
        class="body' body-primary"
        data-testid="body-component"
      >
        usernameOnly
      </p>
    </div>
  </div>
</DocumentFragment>
`;
